--- a/backup/Iris.html
+++ b/backup/Iris.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <title>Iris</title>
     <link rel="icon" href="/image/favicon.ico">
-    <link rel="stylesheet" href="/css/Iris.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Google Fonts Link For Icons -->
+    <link rel="stylesheet" href="../public/css/iris.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <script src="/js/iris.js" defer></script>
 </head>
@@ -16,12 +16,12 @@
 
 <div class="chatbot">
     <header>
-        <h2><bold>IRIS</bold></h2>
+        <h2>IRIS</h2>
         <span class="material-symbols-outlined">close</span>
     </header>
     <ul class="chatbox">
         <li class="chat incoming">
-            <img src="./public/image/chatbot.png" alt="Chatbot Icon" class="chatbot-icon">
+            <img src="/image/chatbot.png" alt="Chatbot Icon" class="chatbot-icon">
             <p>Hi there<br> How can I help you today?</p>
         </li>
         <li class="chat outgoing">
